# fixed drawer open overflow scroll

--- a/assets/base.css
+++ b/assets/base.css
@@ -2717,7 +2717,7 @@ details-disclosure>details {
     }
 }
 
-@media screen and (min-width: 990px) {
+@media screen and (min-width: 1384px) {
     .overflow-hidden-tablet {
         overflow: auto;
     }
